unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/breadwinner_ns__BW_Line_Item__c.object-meta.xml
<CustomObject>
    <label>NetSuite Line Item</label>
    <nameField>
        <label>Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>