unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__Description__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Description__c</fullName>
    <label>Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>