unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__ExpectedReceiptDate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ExpectedReceiptDate__c</fullName>
    <label>Expected Receipt Date</label>
    <type>Date</type>
</CustomField>