unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__IsBillable__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__IsBillable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>