unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__IsClosed__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__IsClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>