unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__ItemName__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ItemName__c</fullName>
    <label>Item Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>