unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__Line_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Line_Item_Type__c</fullName>
    <label>Line Item Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>