unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__ParentCompanyIDName__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ParentCompanyIDName__c</fullName>
    <label>Parent Company ID &amp; Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>