unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__ParentDueDate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ParentDueDate__c</fullName>
    <label>Parent Expires/Due Date</label>
    <type>Date</type>
</CustomField>