unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__ParentEntity__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ParentEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer ID</label>
    <referenceTo>breadwinner_ns__BW_Company__c</referenceTo>
    <relationshipLabel>NetSuite Line Items</relationshipLabel>
    <relationshipName>NetSuite_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>