unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__ParentExpectedCloseDate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ParentExpectedCloseDate__c</fullName>
    <label>Parent Exp. Close Date</label>
    <type>Date</type>
</CustomField>