unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__ParentSalesforceAccount__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ParentSalesforceAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NetSuite Line Items</relationshipLabel>
    <relationshipName>NetSuite_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>