unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__PercentComplete__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__PercentComplete__c</fullName>
    <description>Percent Completed</description>
    <label>Percent Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>