unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__QuantityAvailable__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__QuantityAvailable__c</fullName>
    <description>Quantity Available</description>
    <label>Quantity Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>