unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__QuantityBilled__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__QuantityBilled__c</fullName>
    <description>Billed on A/P and Refunded on A/R</description>
    <label>Billed/Refunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>