unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__QuantityFulfilled__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__QuantityFulfilled__c</fullName>
    <description>Quantity Fulfilled</description>
    <label>Quantity Fulfilled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>