unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__QuantityPacked__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__QuantityPacked__c</fullName>
    <description>Quantity Packed</description>
    <label>Quantity Packed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>