unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__QuantityPicked__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__QuantityPicked__c</fullName>
    <description>Quantity Picked</description>
    <label>Quantity Picked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>