unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__QuantityReceived__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__QuantityReceived__c</fullName>
    <description>Received on A/P and Returned on A/R</description>
    <label>Received/Returned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>