unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__Rate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Rate__c</fullName>
    <label>Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>