unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__RevRecScheduleName__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__RevRecScheduleName__c</fullName>
    <label>Rev Rec Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>