unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__RevRecStartDate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__RevRecStartDate__c</fullName>
    <label>Rev Rec Start Date</label>
    <type>Date</type>
</CustomField>