unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__ShipAddressInternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ShipAddressInternalId__c</fullName>
    <label>Ship To Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>