unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__ShipGroup__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__ShipGroup__c</fullName>
    <label>Ship Group</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>