unpackaged/main/default/objects/breadwinner_ns__BW_Line_Item__c/fields/breadwinner_ns__TaxDetailsReference__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__TaxDetailsReference__c</fullName>
    <label>Tax Details Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>